--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </p>
       <div class="mybutton">
         <a class="btn btn-outline-dark" href="https://github.com/Adityo4" ><img src="github-mark.png" alt="" class="image">Github</a>
-        <a type="button" class="btn btn-outline-dark"><img src="LI-In-Bug.png" alt="" class="image">Linkedin </a>
+        <a class="btn btn-outline-dark" href="https://www.linkedin.com/in/muhammad-adityo-kusumawardhana-b9740b246"><img src="LI-In-Bug.png" alt="" class="image">Linkedin </a>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#273036" fill-opacity="1" d="M0,64L60,64C120,64,240,64,360,96C480,128,600,192,720,197.3C840,203,960,149,1080,106.7C1200,64,1320,32,1380,16L1440,0L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
     </div>
